# DrishtiStream

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  test_client.py
src/drishti_stream/: __init__.py  config.py  main.py
src/drishti_stream/models/: __init__.py  messages.py
src/drishti_stream/stream/: __init__.py  frame_scheduler.py  video_reader.py  websocket.py
tests/: __init__.py  conftest.py  test_placeholder.py
